# GOAC

./: .bumpversion.toml  .gitignore  LCO.cif  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  wheels.yml
Examples/FeSbO4/Calc-Energy/: FeSbO4.cif  alpha  beta  const  job  out.12859225  self_e
Examples/FeSbO4/GA/1/: options  out
Examples/FeSbO4/GA/2/: job  options  out
Examples/FeSbO4/GA/3/: out
Examples/FeSbO4/GA/4/: out
Examples/FeSbO4/GA/5/: out
Examples/FeSbO4/GD/1/: out
Examples/FeSbO4/GD/2/: out
Examples/FeSbO4/GD/3/: job  out
Examples/FeSbO4/GD/4/: out
Examples/FeSbO4/GD/5/: out
Examples/FeSbO4/HY/1/: out
Examples/FeSbO4/HY/2/: out
Examples/FeSbO4/HY/3/: job  out
Examples/FeSbO4/HY/4/: options  out
Examples/FeSbO4/HY/5/: out
Examples/FeSbO4/MC/1/: out
Examples/FeSbO4/MC/2/: out
Examples/FeSbO4/MC/3/: job  options  out
Examples/FeSbO4/MC/4/: out
Examples/FeSbO4/MC/5/: out
Examples/FeSbO4/REMC/1/: job  out
Examples/FeSbO4/REMC/2/: out
Examples/FeSbO4/REMC/3/: out
Examples/FeSbO4/REMC/4/: out
Examples/FeSbO4/REMC/5/: options  out
Examples/FeSbO4/SA/1/: options  out
Examples/FeSbO4/SA/2/: out
Examples/FeSbO4/SA/3/: out
Examples/FeSbO4/SA/4/: out
Examples/FeSbO4/SA/5/: out
Examples/LLZO/: LLZO.cif
Examples/LLZO/Calc-Energy/: alpha  const  job  out  self_e
Examples/LLZO/GA/1/: out
Examples/LLZO/GA/10/: out
Examples/LLZO/GA/2/: out
Examples/LLZO/GA/3/: out
Examples/LLZO/GA/4/: job  out
Examples/NaCl/: NaCl.cif  alpha  beta
Examples/NaCl/Greedy/: job  options  out.12848383
Examples/NaCl/SA/: job  out
GOAC/: ABCEwald.f90  GOAC.f90  GreedySolver.py  GurobiSolver.py  IterationProblem.py  RandomSolver.py  Solver.py  __init__.py  __main__.py  test.py
(+448 files in other folders)
