[build-system]
requires = [
    "setuptools >= 68.0",
    "wheel",
    "numpy >= 1.26",
    "meson >= 1.2",
    "ninja >= 1.11",
]
build-backend = "setuptools.build_meta"

[project]
name = "GOAC"
version = "0.1.0"
description = "Global Optimization of Atomistic Configurations by Coulomb Energies"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Konstantin Köster", email = "p.kaghazchi@fz-juelich.de"},
]
maintainers = [
    {name = "Payam Kaghazchi", email = "p.kaghazchi@fz-juelich.de"},
]
requires-python = ">=3.9"
dependencies = [
    "numpy >= 1.26",
    "pymatgen >= 2023.11",
    "gurobipy >= 11.0",
]
keywords = ["coulomb", "optimization", "materials", "crystallography"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Fortran",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Homepage = "https://iffgit.fz-juelich.de/k.koester/goac"
Documentation = "https://doi.org/10.1038/s41524-025-01690-7"

[project.scripts]
goac = "GOAC.__main__:main"

[tool.setuptools]
packages = ["GOAC"]

[tool.setuptools.package-data]
GOAC = ["*.so", "*.pyd"]

[tool.cibuildwheel]
# Build for CPython 3.10 through 3.14. PyPy and musllinux are skipped: the
# Fortran/OpenMP toolchain story is only validated for CPython + glibc/macOS/MSVC.
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = "pp* *-musllinux*"
build-verbosity = 1

[tool.cibuildwheel.linux]
# manylinux images are RHEL-based; pull in gfortran (libgomp ships with gcc).
before-all = "yum install -y gcc-gfortran || dnf install -y gcc-gfortran"
